# SCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
app/: main.cpp
include/: helloworld.h  window.h
include/ecs/: Component.h  Entity.h  Scene.h
info/: READINGS
src/: Main.cpp  helloworld.cpp  main.cpp  window.cpp
src/ecs/: Component.cpp  Scene.cpp
